--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,9 @@
             <h2>Total des achats par sexe</h2>
             {% include 'graphique.html' %}
         </div>
+        <div>
+            Mentions légales : cette application respecte la règlementation de protection des données utilisateurs.
+        </div>
     </div>
 </body>
 </html>
